syntax = "proto3";

option go_package = "github.com/NFCHKK/grpc";

package http_grpc;

// !import "google/api/annotations.proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SaveNotes(SaveNotesRequest) returns (SaveNotesResponse) {}
  rpc GetNotes(GetNotesRequest) returns (GetNotesResponse) {}
  rpc MiniAuth(AuthRequest) returns (AuthResponse){}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ReqHead {
  string id = 1;
}
message RspHead {
  int32 code = 1;
  string msg = 2;
}

message AuthRequest {
  string code = 1;
}

message AuthResponse {
  RspHead head = 1;
  string login_code = 2;
}

message SaveNotesRequest {
  ReqHead head = 1;
  string notes = 2;
}

message SaveNotesResponse {
  RspHead head = 2;
}

message GetNotesRequest {
  ReqHead head = 1;
}

message GetNotesResponse {
  RspHead Head = 1;
  string notes = 2;
}